# 7q1

./: .gitignore  .pdm.toml  README.md  pyproject.toml  run.sh
app/: db.sqlite3
app/administration/: models.py
app/administration/management/commands/: createdefaultuser.py
app/administration/migrations/: 0001_initial.py
app/assignment/: settings.py  urls.py
app/company/: models.py  urls.py
app/company/api/: serializers.py  services.py  urls.py  views.py
app/company/migrations/: 0001_initial.py
app/companyproduct/: models.py
app/companyproduct/migrations/: 0001_initial.py
app/files/: companies.csv  company_products.csv  products.csv
app/product/: models.py
app/product/api/: serializers.py
app/product/migrations/: 0001_initial.py
assignment/: db.sqlite3
assignment/administration/: models.py
assignment/administration/management/commands/: fetchcompanies.py  fetchcompany.py  fetchcompanyproducts  fetchcompanyproducts.py  fetchproducts.py
assignment/api/: urls.py
assignment/api/company/: views.py
assignment/assignment/: settings.py  urls.py
assignment/company/: models.py  urls.py
assignment/company/api/: serializers.py  urls.py  views.py
assignment/company/migrations/: 0001_initial.py  0002_companyproduct.py
assignment/companyproduct/: apps.py  models.py
assignment/companyproduct/migrations/: 0001_initial.py
assignment/product/: models.py
assignment/product/api/: serializers.py
assignment/product/migrations/: 0001_initial.py  0002_alter_product_name.py
