[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Md Badiuzzaman Pranto", email = "prantoamt@gmail.com"},
]
dependencies = [
    "Django==4.1.5",
    "djangorestframework==3.14",
    "markdown>=3.4.1",
    "django-filter>=22.1",
    "drf-spectacular>=0.25.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.scripts]
startdev = "python3 app/manage.py runserver 0.0.0.0:8000"
makemigrations = "python3 app/manage.py makemigrations"
migrate = "python3 app/manage.py migrate"
startapp = "python3 app/manage.py startapp"
collectstatic = "python3 app/manage.py collectstatic"
createsuperuser = "python3 app/manage.py createsuperuser"
fetchcompanies = "python3 app/manage.py fetchcompanies"
fetchproducts = "python3 app/manage.py fetchproducts"
fetchcompanyproducts = "python3 app/manage.py fetchcompanyproducts"
formatcode = "python3 -m black app"

[tool.pdm.dev-dependencies]
formatter = [
    "black>=22.12.0",
]
